<resources>
    <string name="app_name">Consumer Protection</string>

    <string name="font_header">fonts/Montserrat-Bold.ttf</string>
    <string name="font_Sub_header">fonts/Montserrat-Medium.ttf</string>
    <string name="font_para">fonts/Montserrat-Regular.ttf</string>
    <string name="font_para_light">fonts/Montserrat-Light.ttf</string>
    <string name="font_para_extra_light">fonts/Montserrat-ExtraLight.ttf</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_as">Sign Up as: </string>
    <string name="consumer">Consumer</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="phone_number">Phone Number</string>
    <string name="alert">Alert</string>
    <string name="ok">Ok</string>
    <string name="add_organization">Add Organization</string>
    <string name="hello">Hello</string>
    <string name="organization_name">Organization Name</string>
    <string name="description">Description</string>
    <string name="add_logo">Add Logo</string>
    <string name="organization_type">Organization Type</string>
    <string name="from_gallery">Choose from Gallery</string>
    <string name="from_camera">Choose from Camera</string>
    <string name="error_please_insert_a_valid_image">Please insert a valid image.</string>
    <string name="need_permissions">Need Permissions</string>
    <string name="need_permissions_to_use_this_feature">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="goto_settings">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="view_organization">View Organization</string>
    <string name="shop_details">Shop Details</string>
    <string name="add_shop">Add Shop</string>
    <string name="please_add_shop_details">Please add shop details :</string>
    <string name="shop_name">Shop name</string>
    <string name="shop_address">Shop Address</string>
    <string name="error_add_a_location">Please add a location.</string>
    <string name="your_location">Your location</string>
    <string name="image_description" />
    <string name="done">Done</string>
    <string name="loading">Loading…</string>
    <string name="address">Address</string>
    <string name="error_no_address">Please select your location.</string>
    <string name="unable_to_get_your_location">Unable to get your location.</string>
    <string name="allow_location_permissions">Allow app to access this device\'s location?</string>
    <string name="title_activity_search_location">Search Location</string>
    <string name="successfully_added">Successfully Added</string>
    <string name="nearest_stocks">Nearest Stocks</string>
    <string name="nearest_shops">Nearest Shops</string>
    <string name="import_prediction">Import Prediction</string>
    <string name="price_prediction">Price Prediction</string>
    <string name="complaints">Complaints</string>
    <string name="contact_us">Contact Us</string>
    <string name="category_type">Category - %s</string>
    <string name="sub_category_type">Sub Category - %s</string>
    <string name="title">Title</string>
    <string name="asanka_sandaruwan">Asanka Sandaruwan</string>
    <string name="uditha_kariyawasam">Uditha Kariyawasam</string>
    <string name="nelushi_nitara">Nelushi Nitara</string>
    <string name="email_us">Email Us</string>
    <string name="web">Web</string>
    <string name="title_activity_maps">Map</string>
    <string name="seasonal_variation">Seasonal variation</string>
    <string name="sales_prediction">Sales Prediction</string>
    <string name="min_max_ratio_10_100">Min/Max Ratio: %s ~ %s</string>
    <string name="_947">+947########</string>
    <string name="enter_6_digit_pin">Enter 6 digit pin</string>
</resources>