<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:fitsSystemWindows="false"
    tools:context=".ui.SignUpActivity">

    <com.jachdev.consumerprotection.ui.widget.HeaderView
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:text="@string/sign_up" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium">

            <com.jachdev.commonlibs.widget.CustomEditText
                android:id="@+id/et_name"
                style="@style/EditText"
                android:hint="@string/name"
                android:inputType="textPersonName|textCapWords"
                app:fontType="@string/font_para"
                app:layout_constraintTop_toBottomOf="@+id/headerView" />

            <com.jachdev.commonlibs.widget.CustomEditText
                android:id="@+id/et_email"
                style="@style/EditText"
                android:layout_marginTop="@dimen/medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:fontType="@string/font_para"
                app:layout_constraintTop_toBottomOf="@+id/headerView" />

            <com.jachdev.commonlibs.widget.CustomEditText
                android:id="@+id/et_phone"
                style="@style/EditText"
                android:layout_marginTop="@dimen/medium"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:fontType="@string/font_para"
                app:layout_constraintTop_toBottomOf="@+id/headerView" />

            <com.jachdev.commonlibs.widget.CustomEditText
                android:id="@+id/et_password"
                style="@style/EditText"
                android:layout_marginTop="@dimen/medium"
                android:hint="@string/password"
                android:inputType="textPassword"
                app:fontType="@string/font_para"
                app:layout_constraintTop_toBottomOf="@+id/headerView" />

            <com.jachdev.commonlibs.widget.CustomEditText
                android:id="@+id/et_confirm_password"
                style="@style/EditText"
                android:layout_marginTop="@dimen/medium"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                app:fontType="@string/font_para"
                app:layout_constraintTop_toBottomOf="@+id/headerView" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.jachdev.commonlibs.widget.CustomTextView
                    app:fontType="@string/font_para"
                    android:layout_marginTop="@dimen/medium"
                    android:layout_weight="1"
                    android:text="@string/sign_up_as"
                    style="@style/TextView" />

                <com.jachdev.commonlibs.widget.CustomTextView
                    android:id="@+id/tv_user_type"
                    app:fontType="@string/font_header"
                    android:layout_marginTop="@dimen/medium"
                    android:text="@string/consumer"
                    style="@style/TextView" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/rg_user_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="@dimen/medium">

                <RadioButton
                    android:id="@+id/rb_consumer"
                    android:button="@drawable/bg_consumer_selector"
                    android:layout_margin="@dimen/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rb_vendor"
                    android:button="@drawable/bg_vendor_selector"
                    android:layout_margin="@dimen/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rb_admin"
                    android:button="@drawable/bg_admin_selector"
                    android:layout_margin="@dimen/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RadioGroup>

            <com.jachdev.commonlibs.widget.CustomButton
                android:layout_marginTop="@dimen/medium"
                app:fontType="@string/font_para"
                android:text="@string/sign_up"
                style="@style/Button"
                android:onClick="onSignUnClick"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>