<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/low"
    android:padding="@dimen/low"
    android:background="@drawable/bg_prediction_card"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Milk"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_medium"
        app:fontType="@string/font_header"
        app:layout_constraintEnd_toStartOf="@+id/customTextView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/customTextView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Current prediction rate: "
        android:textColor="@color/white"
        android:textSize="8sp"
        app:fontType="@string/font_para"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/tvValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/low"
        android:text="Rs 150"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:fontType="@string/font_header"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customTextView10" />

    <com.jachdev.commonlibs.widget.CustomTextView
        android:id="@+id/tvMinMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_max_ratio_10_100"
        android:padding="@dimen/low"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:fontType="@string/font_para"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvValue" />

</androidx.constraintlayout.widget.ConstraintLayout>